# pluckit

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  cli.md  index.md  roadmap.md  selectors.md
docs/superpowers/plans/: 2026-04-02-pluckit-core.md  2026-04-02-pluckit-impl.md  2026-04-02-training-data-generator.md  2026-04-04-plucker-api.md  2026-04-11-chain-serializer-and-cli-rewrite.md  2026-04-11-mcp-serialization-and-ast-cache.md
docs/superpowers/specs/: 2026-04-02-pluckit-design.md  2026-04-04-plucker-api-design.md  2026-04-10-ast-css-viewer-design.md  2026-04-10-fledgling-python-integration-design.md  2026-04-11-mcp-serialization-and-ast-cache-design.md  2026-04-18-diff-patch-atfile-design.md
reference/: api.yaml
src/pluckit/: __init__.py  _context.py  _paths.py  _sql.py  cache.py  chain.py  cli.py  config.py  context.py  doc_selection.py  fn.py  fts.py  isolated.py  mutation.py  mutations.py  plucker.py  selection.py  selector.py  selectors.py  source.py  types.py
src/pluckit/pluckins/: __init__.py  base.py  calls.py  history.py  scope.py  search.py  viewer.py
src/pluckit/plugins/: __init__.py  base.py  calls.py  history.py  scope.py  viewer.py
tests/: conftest.py  test_cache.py  test_chain.py  test_chain_cli.py  test_chains.py  test_cli.py  test_config.py  test_context.py  test_diff_flag.py  test_docs.py  test_file_args.py  test_fn.py  test_isolated.py  test_mutations.py  test_patch.py  test_paths.py  test_plucker.py  test_plucker_context.py  test_plucker_serial.py  test_plugin_base.py  test_public_api.py  test_selection.py  test_selection_plugins.py  test_selector.py  test_selectors.py  test_source.py
tests/pluckins/: test_calls.py  test_fts_collection.py  test_history.py  test_scope.py  test_search.py  test_viewer.py
tests/plugins/: test_calls.py  test_history.py  test_scope.py  test_viewer.py
training/: README.md  chain_parser.py  chain_sampler.py  dynamic_errors.py  error_pools.py  finetune.py  format.py  generate.py  implementor-prompt.md  inference.py  intent.py  pools.py  raw_pairs.jsonl  rejected.jsonl  requirements-training.txt  run_pipeline.sh  spec.py  system_prompt.py  system_prompt.txt  train.jsonl  training.jsonl  training_chat.jsonl  training_completion.jsonl  val.jsonl  valid_pairs.jsonl  validate.py
training/tests/: test_chain_parser.py  test_chain_sampler.py  test_chain_sampler_expanded.py  test_format.py  test_intent.py  test_pools.py  test_spec.py  test_system_prompt.py  test_validate.py
