[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ast-pluckit"
version = "0.1.0"
description = "A fluent API for querying, viewing, and mutating source code — CSS selectors over ASTs, backed by DuckDB"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pluckit = "pluckit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pluckit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
