[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ast-pluckit"
version = "0.11.1"
description = "A fluent API for querying, viewing, and mutating source code — CSS selectors over ASTs, backed by DuckDB."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Teague Sterling", email = "teaguesterling@gmail.com" },
]
keywords = [
    "ast",
    "tree-sitter",
    "code-search",
    "codemod",
    "refactoring",
    "static-analysis",
    "duckdb",
    "sitting-duck",
    "css-selectors",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # 1.3.2 is the floor required by the duck_tails community extension
    # that powers the History plugin. sitting_duck works fine on earlier
    # releases, but we pin to the stricter of the two.
    "duckdb>=1.3.2",
]

[project.optional-dependencies]
fledgling = [
    # Optional soft-dep: when installed, pluckit's _Context loads fledgling
    # macros into the default connection so plugins (e.g. AstViewer) can
    # call fledgling macros like find_class_members instead of hand-rolling
    # SQL. Pluckit still works without fledgling — the plugins fall back
    # to inline queries.
    "fledgling-mcp>=0.7.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "fledgling-mcp>=0.7.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-exclude>=1.0",
    "pymdown-extensions>=10.9",
]

[project.urls]
Homepage = "https://github.com/teaguesterling/pluckit"
Documentation = "https://pluckit.readthedocs.io"
Repository = "https://github.com/teaguesterling/pluckit"
Issues = "https://github.com/teaguesterling/pluckit/issues"
Changelog = "https://github.com/teaguesterling/pluckit/blob/main/CHANGELOG.md"

[project.scripts]
pluckit = "pluckit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pluckit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pluckit",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "training",
    "reference",
    "docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pluckit]
plugins = ["AstViewer"]

[tool.pluckit.sources]
code = "src/**/*.py"
tests = "tests/**/*.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter
